# stephanelkhoury

./: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  run.txt  tailwind.config.js  test-modals.html  tsconfig.json
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  trace  (+8 more)
upcoming-projects/03-project-management-dashboard/apps/project-service/: Dockerfile  alembic.ini  package.json  pyproject.toml
upcoming-projects/03-project-management-dashboard/apps/project-service/alembic/: env.py
upcoming-projects/03-project-management-dashboard/apps/project-service/alembic/versions/: 001_initial_migration.py
upcoming-projects/03-project-management-dashboard/apps/project-service/app/: main.py
upcoming-projects/03-project-management-dashboard/apps/project-service/app/api/: deps.py
upcoming-projects/03-project-management-dashboard/apps/project-service/app/core/: config.py
upcoming-projects/03-project-management-dashboard/apps/project-service/app/crud/: base.py  project.py
upcoming-projects/03-project-management-dashboard/apps/project-service/app/db/: base.py  base_class.py  session.py
upcoming-projects/03-project-management-dashboard/apps/project-service/app/models/: project.py
upcoming-projects/03-project-management-dashboard/apps/project-service/app/schemas/: project.py
upcoming-projects/03-project-management-dashboard/apps/project-service/src/: project.module.ts  project.service.ts
upcoming-projects/03-project-management-dashboard/apps/project-service/src/dto/: project.dto.ts
(+705 files in other folders)
